--- a/index.html
+++ b/index.html
@@ -10,5 +10,12 @@
     <header>
         <h1>Oi Kaká</h1>
     </header>
+
+    <footer> 
+        <ul>
+<li> Redes Sociais</li>
+
+    </ul>
+</footer>
 </body>
 </html>
