add item na lista

--- a/index.html
+++ b/index.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pág do Marlon e da Kaká</title>
 </head>
+
 <body>
     <header>
         <h1>Oi Kaká</h1>
     </header>
 
-    <footer> 
+    <footer>
         <ul>
-<li> Redes Sociais</li>
-
-    </ul>
-</footer>
+            <li> Redes Sociais</li>
+            <li>Endereços</li> 
+            <!-- FOI MAL KAKÁ, EU ATUALIZEI SUA LISTA, NÃO BRIGA CMG -->
+        </ul>
+    </footer>
 </body>
+
 </html>
